[package]
name = "recent"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/recent"
documentation = "https://docs.rs/recent"
description = "Get the recent issues and pull-requests on github"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
tide = "0.15.0"
chrono = "0.4.19"
html-index = "0.3.4"

[dev-dependencies]
